# pointnet_semantickitti

./: .gitignore  README.md  classify.py  pyproject.toml  run.py
pc_classifier/: dataset.py  neuralnetcode.py  transforms.py
rust_wheel/: rustlib-0.1.18-cp313-cp313-manylinux_2_34_x86_64.whl
test/: test_networks.py  test_seq.py  test_transforms.py
